fix bugs with wrap

--- a/admin/src/pages/ArticleManage/override.css
+++ b/admin/src/pages/ArticleManage/override.css
@@ -957,7 +957,7 @@
 }
 
 
-.custom-html-style *{
+.custom-html-style p{
   white-space: pre-line;
   overflow-wrap: break-word;
 }
